# -signal-system

./: .gitignore  CLAUDE.md  CVP_COMPAT.json  Cargo.toml  Package.swift  README.md  ci.sh  index.html  package-lock.json  package.json  qs-kernel.config.cjson  transition_morphism.json  tsconfig.app.json  tsconfig.json  verify.py
SpatialReplayMode/: Package.swift
_v_ref_export/: bootstrap.sh  pyproject.toml
csk_admission/: __init__.py  admission_gate.py  ambiguity_debt.py  ambiguity_debt_baseline.json  anchor_rules.py  divergence.py  ledger.py  pipeline.py  registry.py  topics.py  types.py  witness_contracts.py
cvp_drift_injector/: __init__.py  config.py  engine.py  experiment.py  runner.py  seeds.py
cvp_transition/: __init__.py  __main__.py  fixtures.py  gates.py  schema.py  validate.py  witness.py
docs/: GDD_TerritorialInfluence.md  QUICKSTART.md  causal_admissibility.md  csk-event-admission-layer-v1.md  cvp-transition-spec-v1.2-to-v1.3.md  director_loop_hashing_protocol_v1.md  eiac-schema-v1.0.md  eiac-stratified-admissibility-v0.1.md  eiac-system-boundary-map.md  eiac-v0-v1-boundary-contract.md  event_schema.md  jetson-edge-runtime.md  nic-v1.1-spec.md  overlay_spec.md  simulation-os-kernel-reference-v0.5.md  v2_closure_certificate.json  v2_closure_certificate.md  vas_exec_model_v1.md  witness_template.json
e12_fixtures/: e12_manifest.json  impl_a_stdout.txt  impl_b_stdout.txt
edge_runtime/: agent.py  config.py  witness_runner.py
eiac/: __init__.py  canon.py  extract.py  schema.py
engine/hard_sync/: CMakeLists.txt
engine/hard_sync/include/: AssetManager.h  AtomicRingBuffer.h  ChilliPluginWrapper.h  Engine.h  MasterBus.h  ParameterBridge.h  ParameterTrace.h  PatternSequencer.h  Resampler.h  RoutingEngine.h  SampleBuffer.h  Sha256.h  TriggerEvent.h  Voice808State.h  VoiceManager.h  WavDecoder.h
engine/hard_sync/tests/: asset_manager_test.cpp  engine_test.cpp  hard_sync_test.cpp  host_integration_test.cpp  master_bus_test.cpp  pattern_sequencer_test.cpp  plugin_wrapper_test.cpp  resampler_test.cpp  routing_engine_test.cpp  voice_manager_test.cpp  wav_decoder_test.cpp
examples/: current_knobs.json  events_full_arc.jsonl  events_multi_arc.jsonl  events_vpr_stress.jsonl
experiments/: cre_baseline.json  cvc_cre_baseline_001.json  driver_frames_720.json  sipmg_output_baseline.json  sipmg_output_full_phase.json  sipmg_output_vis_hdr.json  sipmg_sweep.json  (+4 more)
schema-compiler/: Cargo.toml  EVENT_SCHEMAS.v1.json
schema-compiler/src/: json_gen.rs  json_loader.rs  lib.rs  main.rs  manifest.rs  normalize.rs  rust_gen.rs  schema.rs  swift.rs  validate.rs
schema-compiler/tests/: bijectivity.rs  drift_manifest_mismatch.rs  runtime_rejection.rs
schema-compiler/tests/common/: mod.rs
(+484 files in other folders)
