[package]
name = "vdce"
version = "0.1.0"
edition = "2021"

[lib]
name = "vdce"
path = "src/lib.rs"

[[bin]]
name = "vdce"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
thiserror = "1"
