[package]
name = "signal-system"
version = "0.1.0"
edition = "2021"

[dependencies]
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
sha2       = "0.10"
hex        = "0.4"

[[bin]]
name = "verifier"
path = "src/bin/verifier.rs"

[[bin]]
name = "verifier_v2"
path = "src/bin/verifier_v2.rs"
